concertei layout bugado pelo live server + adicionei a segunda section

--- a/particles_animation.css
+++ b/particles_animation.css
@@ -18,6 +18,7 @@
     }
     50%{
         position: absolute;
+        top: 100px;
         width: 100px;
         height: 25px;
     }
